--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
-    "typescript": "^4.4.2",
-    "sass": "^1.72.0"
+    "@types/react-helmet": "^6.1.11",
+    "react-helmet": "^6.1.0",
+    "sass": "^1.72.0",
+    "typescript": "^4.4.2"
   },
   "eslintConfig": {
     "extends": [
